things unclear:
wchar_t/L"string" purpose
switch vs callbacks (virtuals)

latests controls:
F2 to start and end recording
F6 or alt+F4 quits the game
Enter will spawn player
WASD, arrows moves him
Space - jumps

day 117: simd packing
 

day 116: 
 with -02:       cycles total    |calls| cycles per call
  draw_rect_slow: 78927118   cy    50h   1578542  cy/h
  draw_rect_quak: 46461665   cy    50h   929233   cy/h
 with -0d         
  draw_rect_slow: 1947287758 cy    53h   36741278 cy/h
  draw_rect_quak: 304777255  cy    53h   5750514  cy/h

day 115: simd basics
 1. single instruction multiple data
 2. "normal" b = a + a; -> add b a,a or mov b, a; add b, a;
 3. simd 4-wide
  b0   a0   a0 // lane
  b1 = a1 + a1
  b2   a2   a2
  b3   a3   a3
  -- single operation --
  sse    - 4 wide
  avx    - 8 wide 
  avx512 - 16 wide

        "soa"          vs             "aos"
 structure of arrays            array of structures
 we need: 					struct color {f32 r,g,b,a}
 struct colors {
  f32 r[1000];
  f32 g[1000];
  f32 b[1000];
  f32 a[1000];
 }   

 because intel cpu has a wait to pack data to registers is much manner               

day 111: how to optimize:
 1. gather stats/info - where/how is it slow? (how much they are being run in code?)
 2. estimate how fast should it run
 3. analyze efficiency (algo) and perfromance (code/hardware optimizations)
  3.1 improve algo by removing pieces (removing unnecessary work)
 4. think, solve, code

day 112:
 simd - single instruction multiple data (typical 4 things, but as many 8 or 16 or even 64)
 intrusctions (L0)                       cache            memory
 add register0, register1, register2 	L1, L2, L3	   storing values
 each each is slower than the other (L0 being fastest, L3 being slowest)
 L1 - let's say 2 to read/write?
 L2 - let's say 16 to read/write?
 memory - 300 cycles to read/write?
 add - 2 cycles
 cycle - cpu work - so 3.2 ghz -> max 3.2 * 10^9 cycles per second